Fix icons sometimes cut off in certain browsers

--- a/src-ui/src/app/components/document-list/document-card-small/document-card-small.component.scss
+++ b/src-ui/src/app/components/document-list/document-card-small/document-card-small.component.scss
@@ -53,8 +53,9 @@
   }
 
   .metadata-icon {
-    width: 0.8rem;
-    height: 0.8rem;
+    width: 1.0rem;
+    height: 1.0rem;
+    padding: 0.05rem;
   }
 }
 
